--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
 version: "3.2"
 services:
+  ghp-maps:
+    build:
+      context: .
+      dockerfile: ./docker/maps/Dockerfile
+      args:
+        MAP_FILE: europe_germany_berlin.pbf
+    image: ghp-maps
+    environment:
+      JAVA_EXTRA_OPTS: "-Xmx1g -Xms1g -XX:+UseG1GC -XX:MetaspaceSize=100M"
+    volumes:
+      - ghp-data:/data
+
   graphhopper:
     build:
       context: .
-      dockerfile: ./docker/Dockerfile
-      args:
-        MAP_FILE: europe_germany_berlin.pbf
     image: graphhopper
     expose:
       - 8989
@@ -14,9 +23,13 @@ services:
     environment:
       JETTY_PORT: 8989
       JAVA_EXTRA_OPTS: "-Xmx1g -Xms1g -XX:+UseG1GC -XX:MetaspaceSize=100M"
+      CONFIG_FILE: /graphhopper/config.properties
     volumes:
+      - ./docker/maps/config.properties:/graphhopper/config.properties
       - ghp-data:/data
     restart: unless-stopped
+    depends_on:
+      - ghp-maps
     logging:
       driver: json-file
       options:
