--- a/docker/maps/Dockerfile
+++ b/docker/maps/Dockerfile
@@ -1,6 +1,9 @@
-FROM openjdk:8-jdk-alpine as builder
-RUN apk --update --no-cache add bash wget maven
-
+FROM openjdk:8-jdk as builder
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    wget \
+		maven \
+		osmium-tool \
+	&& rm -rf /var/lib/apt/lists/*
 RUN mkdir -p /data
 RUN mkdir -p /graphhopper
 
@@ -8,10 +11,14 @@ COPY . /graphhopper/
 
 WORKDIR /graphhopper
 
-ARG MAP_FILE=europe_germany_berlin.pbf
-ENV MAP_FILE=${MAP_FILE}
-COPY ./docker/maps/config.properties ./
-RUN ./graphhopper.sh import /data/${MAP_FILE}
+ARG MAP_FILES=europe_germany_berlin.pbf
+ENV MAP_FILES=${MAP_FILES}
+COPY ./docker/maps/download-merge-maps.sh ./docker/maps/config.properties ./
+RUN ./download-merge-maps.sh ${MAP_FILES}
+
+ARG JAVA_OPTS="-Xmx4g -Xms4g -server"
+ENV JAVA_OPTS=${JAVA_OPTS}
+RUN ./graphhopper.sh import /data/osmconvert.pbf
 
 FROM alpine:latest as image
 
